Changes in javaGeom library



javaGeom-0.?.? (2009.??.??, rev. ???)

New features
- better support for buffer of infinite curves
- added static factories in most implementation classes
- added CirculinearCurve2DUtils.convert() method
- added NonCirculinearClassException
- added Point2D.centroid() by using weights

Bug fixes
- improve buffer of smooth curves by removing some curves that were too close
	from original curve
- fixed assertion bug in Conics
- fix buffer computation of some shapes

Regressions
- changed ContinuousCirculinearCurve2D to CirculinearContinuousCurve2D

Code
- code rewriting in CirculinearCurve2D
- added missing @override annotations


javaGeom-0.8.0 (2009.06.09, rev. 226)

New features
- added Circulinear branch, which manages curves composed of portion of lines
	and/or of circles. This makes possible computation of curve length, curve
	parallels, and shape buffers. Main implemented features:
	+ CirculinearCurve2D.getParallel(double): computes the parallel curve
	+ CirculinearShape2D.getBuffer(double): computes buffer of the shape
	+ CirculinearShape2D.transform(CircleInversion2D): computes the result of
		transform by a circle inversion.
	+ CirculinearCurve2D.getLength(): computes total length of the curve
	+ CirculinearCurve2D.getLength(double): converts position to length
	+ CirculinearCurve2D.getPosition(double): converts length to position
- added getLeftTangent() and getRightTangent() methods in ContinuousCurve2D
	
Bug fixes
- fixed drawing of polycurves
- fixed bug in intersecting circle arc and line
- fixed bug in computing distance to some linear shapes
- fixed bug in computation of box boundary

Regressions
- Ring2D renamed to LinearRing2D, reserving 'Ring2D' for an interface definition

Code
- splitted CurveSet2D (for future interface) and CurveArray2D (default
	implementation of CurveSet2D)
- introduced AbstractContinuousCurve and AbstractSmothCurve to reduce code
	copies
- normalized toString() methods of simple curves	
	
	