@@ -1,8 +1,12 @@
 Changes in javaGeom library
 
 
+javaGeom-0.9.0 (2009.??.??, rev. ???)
 
-javaGeom-0.?.? (2009.??.??, rev. ???)
+- removed deprecated classes and methods
+
+
+javaGeom-0.?.? (2009.11.15, rev. 242)
 
 New features
 - better support for buffer of infinite curves
